elk-logging-logstash.yaml
apiVersion: v1
kind: Service
metadata:
  name: logstash
  namespace: elk-logging
  labels:
   app: logstash
spec:
  ports:
  - port: 30000
  selector:
    app: logstash
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logstash
  namespace: elk-logging
  labels:
    app: logstash
spec:
  replicas: 1
  selector:
    matchLabels:
      app: logstash
  template:
    metadata:
      labels:
        app: logstash
      annotations:
        fluentbit.io/exclude: "true"
    spec:
      containers:
      - name: logstash
        image: docker.elastic.co/logstash/logstash:7.2.0
        resources:
          limits:
            cpu: 1000m
          requests:
            cpu: 100m
        ports:
        - containerPort: 30000
          name: logstash-http
          protocol: TCP
        volumeMounts:
        - name: pipeline-config
          mountPath: /usr/share/logstash/pipeline/
      volumes:
        - name: pipeline-config
          configMap:
            name: logstash-pipeline
            items:
              - key: logstash.conf
                path: logstash.conf
